Fix unusual scroll overflow issue [this commit may bite me later]

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -79,6 +79,7 @@ html {
   scroll-behavior: smooth;
 }
 
+html,
 body {
   overflow-x: hidden;
 }
